fix dark layout issues

--- a/assets/cke5.css
+++ b/assets/cke5.css
@@ -390,6 +390,9 @@ dl + .cke5_clangtabs .nav.nav-tabs,
     padding: 15px;
 }
 
+
+/* ckeditor5_rexLink */
+
 .ck.ck-link-form_layout-vertical .ck-reset.ck-list + .ck-redaxo-link-dropdown {
     margin-left: 0 !important;
     min-height: var(--ck-ui-component-min-height);
@@ -404,6 +407,9 @@ dl + .cke5_clangtabs .nav.nav-tabs,
     top: var(--ck-spacing-small);
     bottom: var(--ck-spacing-small);
     z-index: 1;
+}
+
+.ck.ck-link-form_layout-vertical .ck-redaxo-link-dropdown {
     border-right: 1px solid var(--ck-color-base-border);
 }
 
@@ -427,4 +433,85 @@ dl + .cke5_clangtabs .nav.nav-tabs,
 
 .ck.ck-link-form_layout-vertical .ck-reset.ck-list + .ck-button:not(.ck-button-save):not(.ck-button-cancel) + .ck-button {
     border-right: 1px solid var(--ck-color-base-border);
+}
+
+.ck.ck-link-form_layout-vertical >.ck-redaxo-link-dropdown >.ck-button:not(:focus) {
+    border-top: 1px solid var(--ck-color-base-border);
+}
+
+.ck.ck-link-form_layout-vertical >.ck-redaxo-link-dropdown >.ck-button {
+    border-radius: 0;
+    margin: 0;
+    padding: var(--ck-spacing-standard);
+    width: 50%;
+}
+
+@media (prefers-color-scheme:dark) {
+    body:not(.rex-theme-light) .cke5-preview-row {
+        background: #151515;
+        border: 1px solid #29292a;
+        border-left: none;
+        border-right: none;
+        background-image: linear-gradient(45deg, #1c1c1c 25%, transparent 25%),
+        linear-gradient(-45deg, #1c1c1c 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, #1c1c1c 75%),
+        linear-gradient(-45deg, transparent 75%, #1c1c1c 75%);
+        background-size: 20px 20px;
+        background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+    }
+
+    .cke5-editor-info {
+        background: #1e1e1e;
+        border: 1px solid #353536;
+    }
+
+    body:not(.rex-theme-light) .cke5_wrap_rex_profile_data {
+        background-color: #383838;
+    }
+
+    body:not(.rex-theme-light) .cke5_clangtabs {
+        border-bottom: 15px solid #383838;
+    }
+
+    body:not(.rex-theme-light) .cke5_clangtabs .nav {
+        border-bottom: 1px solid #394240;
+    }
+
+    body:not(.rex-theme-light) .cke5-tabform {
+        background-color: #343434;
+        border-bottom: 1px solid #394240;
+    }
+
+    body:not(.rex-theme-light) .cke5_clangtabs .nav-tabs > li.active > a,
+    body:not(.rex-theme-light) .cke5_clangtabs .nav-tabs > li.active > a:hover,
+    body:not(.rex-theme-light) .cke5_clangtabs .nav-tabs > li.active > a:focus {
+        color: #fff;
+        background-color: #343434;
+        border-color: #464646;
+        border-top: 2px solid #3bb594;
+        border-bottom: 1px solid #343434;
+    }
+
+    body:not(.rex-theme-light) .cke5_clangtabs .nav-tabs > li > a {
+        color: #ccc;
+        background-color: #3f3f3f;
+        border-color: #313131;
+    }
+    body:not(.rex-theme-light) .cke5_clangtabs .nav-tabs > li > a:hover {
+        color: #ccc;
+        background-color: #252526;
+        border-color: #0f0f10;
+    }
+
+    body:not(.rex-theme-light) .cke5_clangtabs .nav.nav-tabs {
+        background-color: #383838;
+    }
+
+    body:not(.rex-theme-light) .cke5_wrap_rex_profile_data {
+        background-color: #383838;
+    }
+
+    body:not(.rex-theme-light) .cke5-preview-code pre {
+        background-color: #0a0e14 !important;
+    }
 }
